--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Tyral Corporation</title>
   <style>
     @font-face {
       font-family: 'Tesla';
@@ -52,7 +52,8 @@
 <body>
   <div class="flex-center">
     <div class="logo-text">
-      TYRAL<br />
+      <span>TYRAL</span>
+      <br />
       <span class="corp">CORPORATION</span>
     </div>
     <div class="soon-text">Coming soon...</div>
