--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     .logo-text {
       font: bold 64px/0.5 'Tesla', sans-serif;
       color: #e93732;
-      letter-spacing: 10px;
+      letter-spacing: 3px;
       margin: 50px;
     }
 
     .corp {
-      font-size: 22px;
+      font-size: 20px;
       font-weight: normal;
     }
 
@@ -52,11 +52,11 @@
 <body>
   <div class="flex-center">
     <div class="logo-text">
-      <span>TYRAL</span>
+      <span style="letter-spacing: 16px;">TYRAL</span>
       <br />
-      <span class="corp">CORPORATION</span>
+      <span class="corp">SOFTWARE RESEARCH</span>
     </div>
-    <div class="soon-text">Coming soon...</div>
+    <div class="soon-text">Work in progress...</div>
   </div>
 </body>
 
