--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tyral Corporation</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Electrolize&display=swap" rel="stylesheet">
   <style>
     @font-face {
       font-family: 'Tesla';
@@ -43,7 +45,8 @@
     }
 
     .soon-text {
-      font: normal 16px/0.5 'Tesla', sans-serif;
+      font: normal 16px/1.5 'Emblem', sans-serif;
+      text-transform: capitalize;
       color: #e93732;
     }
   </style>
@@ -57,6 +60,7 @@
       <span class="corp">SOFTWARE RESEARCH</span>
     </div>
     <div class="soon-text">Work in progress...</div>
+    <div class="soon-text">(+91) 80765 01673</div>
   </div>
 </body>
 
