--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .flex-center {
-      height: 100%;
+      height: 75%;
       display: flex;
       flex-direction: column;
       justify-content: center;
@@ -46,6 +46,7 @@
       font: normal 16px/1.5 'Emblem', sans-serif;
       text-transform: capitalize;
       color: #e93732;
+      text-align: center;
     }
   </style>
 </head>
@@ -57,8 +58,14 @@
       <br />
       <span class="corp">SOFTWARE RESEARCH</span>
     </div>
-    <div class="soon-text">Work in progress...</div>
-    <div class="soon-text">(+91) 80765 01673</div>
+    <div style="margin-top: 5%;">
+      <p class="soon-text">View our Products</p>
+      <div>
+        <a href="https://www.wordwall.net/" target="_blank" style="display: block;">
+          <img src="ww.png" alt="Wordwall">
+        </a>
+      </div>
+    </div>
   </div>
 </body>
 
